--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -12,39 +12,47 @@
 		<% end %>
 	</small>
 	</h3>
-	<img src="<%= @plan.fixed_image_url %>" style="width:60%;margin:20px 0;">
-	<small><%= @plan.people_num %>人　<%= @plan.price %>円</small>
-	<p>
-		<%= @plan.explanation %>
-	</p>
 	<hr>
-	<h4><strong>予約する</strong></h4>
-	<%= form_tag("/reservation/confirm", method: "get") do |f| %>
-		<div class="row">
-			<div class="col-6">
-				<p>
-				チェックイン日時　　
-				<%= date_field_tag :start_date, nil, :class => "form-control", :style => "width:60%;display:inline-block;" %>
-				</p>
-			</div>
-			<div class="col-6">
-				<p>
-				チェックアウト日時　
-				<%= date_field_tag :end_date, nil, :class => "form-control", :style => "width:60%;display:inline-block;" %>
-				</p>
-			</div>
-			<div class="col-6">
-				<p>
-				１室あたりの人数　　
-				<%= select_tag :people_num, options_for_select(["1", "2", "3", "4"]), :class => "form-control", :style => "width:75px;display:inline-block;" %>
-				</p>
-			</div>
-			<%= hidden_field_tag :plan_id, @plan.id %>
+	<div class="row">
+	<div class="col-7">
+		<img src="<%= @plan.fixed_image_url %>" style="width:90%;margin:20px 0;">
+		<br>
+		<small><%= @plan.people_num %>人　<%= @plan.price %>円</small>
+		<p>
+			<%= @plan.explanation %>
+		</p>
+	</div>
+	<div class="col-5" style="margin-top:20px;">
+		<div class="card" style="padding:20px;background-color:rgba(210, 210, 210, .6)">
+			<h4><strong>予約する</strong></h4>
+			<%= form_tag("/reservation/confirm", method: "get") do |f| %>
+				<div class="row">
+					<div class="col-12">
+						<p>
+						チェックイン日時　　
+						<%= date_field_tag :start_date, nil, :class => "form-control", :style => "width:90%;display:inline-block;" %>
+						</p>
+					</div>
+					<div class="col-12">
+						<p>
+						チェックアウト日時　
+						<%= date_field_tag :end_date, nil, :class => "form-control", :style => "width:90%;display:inline-block;" %>
+						</p>
+					</div>
+					<div class="col-12">
+						<p>
+						１室あたりの人数　　
+						<%= select_tag :people_num, options_for_select(["1", "2", "3", "4"]), :class => "form-control", :style => "width:75px;display:inline-block;" %>
+						</p>
+					</div>
+					<%= hidden_field_tag :plan_id, @plan.id %>
+				</div>
+				<%= submit_tag "予約する", :class => "btn btn-sm btn-primary" %>
+			<% end %>
 		</div>
-		<%= submit_tag "予約する", :class => "btn btn-sm btn-primary" %>
-	<% end %>
+	</div>
 </div>
-<br>
+<hr>
 <h5><strong>空室カレンダー</strong></h5>
 <%= month_calendar events: @reservations do |date, reservations| %>
 	<%= date %>
