--- a/app/views/reservations/confirm.html.erb
+++ b/app/views/reservations/confirm.html.erb
@@ -26,6 +26,9 @@
 	</div>
 </div>
 <br>
+<div style="padding:0 30px;width:60%">
+	<h3 style="border-left:7px solid #4689FF; border-bottom:2px solid #4689FF;padding:11px;">ご予約内容の入力</h3>
+</div>
 <div class="row">
 	<div class="col-7">
 		<div style="padding:30px;">
