--- a/app/views/reservations/new.html.erb
+++ b/app/views/reservations/new.html.erb
@@ -29,8 +29,9 @@
 <div class="row">
 	<!-- background-color:#f0f8ff -->
 	<div class="col-8" style="border-right:1px solid rgba(210, 210, 210, .7)">
-		<div style="padding:30px;">
-			<div class="text-center" style="margin-bottom:7px">
+		<div style="padding:0 30px;">
+			<h3 style="border-left:7px solid #4689FF; border-bottom:2px solid #4689FF;padding:11px;">予約プラン確認</h3>
+			<div class="text-left" style="margin-top:15px; margin-bottom:4px;">
 				<span><strong><%= @plans.length %>件の検索結果があります。</strong></span>
 			</div>
 			<br>
