--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -10,6 +10,9 @@
 		<p>記事分類
 		<%= f.select :article_type, [['オプション', 0], ['記事', 1]], {}, {:class => "form-control", :style => "width:70%"} %>
 		</p>
+		<p>ヘッダー写真
+		<%= f.text_field :thumbnail, :class => "form-control", :style => "width:70%" %>
+		</p>
 		<p>HTML内容
 		<%= f.text_area :content, :class => "form-control", :style => "width:70%;height:240px;" %>
 		</p>
