--- a/app/views/common/_right_bar.html.erb
+++ b/app/views/common/_right_bar.html.erb
@@ -1,11 +1,11 @@
 		<div style="margin-top:30px">
-			<h6>予約情報</h6>
+			<h6><strong>予約情報</strong></h6>
 			<div class="list-group" style="margin-top:20px">
 				<a class="list-group-item" href="/plans/" style="background-color:#f0f8ff">プラン一覧</a>
 				<a class="list-group-item" href="/articles?is_option=0" style="background-color:#f0f8ff">アクティビティ一覧</a>
 				<a class="list-group-item" href="/articles?is_option=1" style="background-color:#f0f8ff">観光地一覧</a>
 			</div>
-			<h6 style="margin:20px 0px">おすすめの情報</h6>
+			<h6 style="margin:20px 0px"><strong>おすすめの情報</strong></h6>
 			<div class="row" style="margin-left:2%;">
 				<div class="col-10 card" style="padding:5px;margin-bottom:5px;">
 					<a href="/articles/1">
