--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,10 +8,12 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<%= render "common/navbar" %>
-<div class="" style="margin:10px 1%;">
-<%= yield %>
-</div>
-<%= render "common/footer" %>
+	<div id="fb-root"></div>
+	<script async defer crossorigin="anonymous" src="https://connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v8.0" nonce="klzKwDZP"></script>
+	<%= render "common/navbar" %>
+	<div class="" style="margin:10px 1%;">
+	<%= yield %>
+	</div>
+	<%= render "common/footer" %>
 </body>
 </html>
