--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -1,5 +1,5 @@
 <div class="card" style="padding:20px;">
-	<h3>
+	<h3 style="border-left:7px solid #4689FF; border-bottom:2px solid #4689FF;padding:11px;">
 	<strong><%= @plan.title %></strong>
 	<% if user_signed_in? %>
 		　<a href="/plans/<%= @plan.id %>/edit" class="btn btn-sm btn-success">編集する</a>　<a href="/plans/new" class="btn btn-sm btn-info">新規作成する</a>
@@ -12,7 +12,6 @@
 		<% end %>
 	</small>
 	</h3>
-	<hr>
 	<div class="row">
 	<div class="col-7">
 		<img src="<%= @plan.fixed_image_url %>" style="width:90%;margin:20px 0;">
@@ -21,6 +20,7 @@
 		<p>
 			<%= @plan.explanation %>
 		</p>
+		<br>
 	</div>
 	<div class="col-5" style="margin-top:20px;">
 		<div class="card" style="padding:20px;background-color:rgba(210, 210, 210, .6)">
@@ -52,6 +52,16 @@
 		</div>
 	</div>
 </div>
+<h5>
+	<strong>設備等</strong>
+	<% if user_signed_in? %>
+		　<a href="/plans/<%= @plan.id %>/edit" class="btn btn-sm btn-success">編集する</a>　<a href="/plans/new" class="btn btn-sm btn-info">新規作成する</a>
+	<% end %>
+</h5>
+<hr>
+<p style="margin:0 5px">
+	<%= @plan.html_content.html_safe %>
+</p>
 <hr>
 <h5><strong>空室カレンダー</strong></h5>
 <%= month_calendar events: @reservations do |date, reservations| %>
