--- a/app/views/reservations/confirm.html.erb
+++ b/app/views/reservations/confirm.html.erb
@@ -1,23 +1,27 @@
 <div style="width::100%">
-	<div style="background-image:url('https://megufuji154.s3.us-east-2.amazonaws.com/photos/common/common3.jpg');background-repeat: no-repeat, repeat;background-size: cover;background-size:100% auto;min-height:250px;width:100%;">
-		<div style="padding:30px 30px 10px 30px;">
-			<div class="card" style="padding:20px;background-color:rgba(240, 240, 240, .45)">
-				<h4>〇 ご予約の流れ</h4>
-				<hr>
-				<div class="row">
-					<div class="col-4">
-						<div class="card" style="padding:10px;margin:5px 10px;">
-							<h5 style="margin-bottom:0px;color:rgba(30, 30, 30, .3)">1 : 予約プランの確認</h5>
-						</div>
-					</div>
-					<div class="col-4">
-						<div class="card" style="padding:10px;border-width:3px;border-color:#66CCFF;margin:5px 10px;">
-							<h5 style="margin-bottom:0px;">2 : ご予約内容の入力</h5>
-						</div>
-					</div>
-					<div class="col-4">
-						<div class="card" style="padding:10px;margin:5px 10px;">
-							<h5 style="margin-bottom:0px;color:rgba(30, 30, 30, .3)">3 : 予約完了</h5>
+	<div class="row" style="min-width::100%;margin:0 !important;display:block;">
+		<div class="d-none d-sm-block">
+			<div style="background-image:url('https://megufuji154.s3.us-east-2.amazonaws.com/photos/common/common3.jpg');background-repeat: no-repeat, repeat;background-size: cover;background-size:100% auto;min-height:250px;width:100%;">
+				<div style="padding:30px 30px 10px 30px;">
+					<div class="card" style="padding:20px;background-color:rgba(240, 240, 240, .45)">
+						<h4>〇 ご予約の流れ</h4>
+						<hr>
+						<div class="row">
+							<div class="col-4">
+								<div class="card" style="padding:10px;margin:5px 10px;">
+									<h5 style="margin-bottom:0px;color:rgba(30, 30, 30, .3)">1 : 予約プランの確認</h5>
+								</div>
+							</div>
+							<div class="col-4">
+								<div class="card" style="padding:10px;border-width:3px;border-color:#66CCFF;margin:5px 10px;">
+									<h5 style="margin-bottom:0px;">2 : ご予約内容の入力</h5>
+								</div>
+							</div>
+							<div class="col-4">
+								<div class="card" style="padding:10px;margin:5px 10px;">
+									<h5 style="margin-bottom:0px;color:rgba(30, 30, 30, .3)">3 : 予約完了</h5>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -25,13 +29,15 @@
 		</div>
 	</div>
 </div>
-<br>
-<div style="padding:0 30px;width:60%">
+<!-- <div style="padding:0 30px;width:60%">
 	<h3 style="border-left:7px solid #4689FF; border-bottom:2px solid #4689FF;padding:11px;">ご予約内容の入力</h3>
-</div>
-<div class="row">
-	<div class="col-7">
-		<div style="padding:30px;">
+</div> -->
+<div class="row" style="margin-top:20px">
+	<div class="col-sm-7 col-12">
+		<div style="padding:0 30px;">
+			<div style="margin-bottom:30px;">
+				<h3 style="border-left:7px solid #4689FF; border-bottom:2px solid #4689FF;padding:11px;">ご予約内容の入力</h3>
+			</div>
 			<div class="row">
 				<div class="col-12">
 					<div class="card" style="padding:15px;margin-bottom:20px;background-color:rgba(240, 240, 240, .6);box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .2);">
@@ -68,7 +74,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-5">
+	<div class="col-sm-5 col-12">
 		<div style="padding:30px;">
 			<div class="card" style="padding:0 20px;box-shadow: 0 10px 25px 0 rgba(0, 0, 0, .2);">
 				<div class="row" style="background-color:rgba(210, 210, 210, .8);padding:14px 0;margin-bottom:10px;border-bottom: 3px solid black;">
