--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,14 +1,14 @@
 <div class="row">
-	<div class="col-3">
+	<div class="d-none d-sm-block col-sm-3">
 		<!---->
 		<%= render("/common/right_bar") %>
 	</div>
-	<div class="col-9">
+	<div class="col-sm-9 col-12">
 		<h3>記事一覧</h3>
 		<hr>
 		<div class="row">
 		<% @articles.each do |article| %>
-			<div class="col-4">
+			<div class="col-sm-4 col-6">
 				<div class="card" style="padding:10px;margin-bottom:10px;">
 					<h6><%= article.title %></h6>
 					<img src="<%= article.fixed_image_url %>" style="width:90%;height:70px;margin-bottom:5px;">
