--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,13 +1,13 @@
 <div style="background-color:rgba(30, 30, 30, .7);padding:30px 50px;color:rgba(240, 240, 240, .7)">
 	<div class="row">
-		<div class="col-3">
+		<div class="col-sm-3 col-6">
 			<h4>トップページ</h4>
 			<hr style="border-color:rgba(230, 230, 230, .6)">
 			<p>
 				<a style="color:rgba(240, 240, 240, .5)" href="/">トップページ</a>
 			</p>
 		</div>
-		<div class="col-3">
+		<div class="col-sm-3 col-6">
 			<h4>予約</h4>
 			<hr style="border-color:rgba(230, 230, 230, .6)">
 			<p>
@@ -18,7 +18,7 @@
 				<% end %>
 			</p>
 		</div>
-		<div class="col-3">
+		<div class="col-sm-3 col-6">
 			<h4>アクティビティ</h4>
 			<hr style="border-color:rgba(230, 230, 230, .6)">
 			<p>
@@ -29,7 +29,7 @@
 			<% end %>
 			</p>
 		</div>
-		<div class="col-3">
+		<div class="col-sm-3 col-6">
 			<h4>観光地</h4>
 			<hr style="border-color:rgba(230, 230, 230, .6)">
 			<p>
