--- a/app/views/plans/show.html.erb
+++ b/app/views/plans/show.html.erb
@@ -13,7 +13,7 @@
 	</small>
 	</h3>
 	<div class="row">
-	<div class="col-7">
+	<div class="col-sm-7">
 		<img src="<%= @plan.fixed_image_url %>" style="width:90%;margin:20px 0;">
 		<br>
 		<small><%= @plan.people_num %>人　<%= @plan.price %>円</small>
@@ -21,7 +21,7 @@
 			<%= @plan.explanation %>
 		</p>
 	</div>
-	<div class="col-5" style="margin-top:20px;">
+	<div class="col-sm-5" style="margin-top:20px;">
 		<div class="card" style="padding:20px;background-color:rgba(210, 210, 210, .6)">
 			<h4><strong>予約する</strong></h4>
 			<%= form_tag("/reservation/confirm", method: "get") do |f| %>
@@ -60,7 +60,14 @@
 </h5>
 <br>
 <p style="margin:0 5px">
-	<%= @plan.html_content.html_safe %>
+	<div class="row">
+		<div class="d-none d-sm-block">
+			<%= @plan.html_content.html_safe %>
+		</div>
+		<div class="d-sm-block d-sm-done">
+			<%= @plan.html_content.gsub("col-4", "col-12").html_safe %>
+		</div>
+	</div>
 </p>
 <hr>
 <h5><strong>空室カレンダー</strong></h5>
