--- a/app/views/reservations/create.html.erb
+++ b/app/views/reservations/create.html.erb
@@ -1,31 +1,29 @@
 <div style="width::100%">
-	<div style="background-image:url('https://megufuji154.s3.us-east-2.amazonaws.com/photos/common/common3.jpg');background-repeat: no-repeat, repeat;background-size: cover;background-size:100% auto;min-height:250px;width:100%;">
-		<div class="text-center" style="width:40%;margin-left:30%;padding-top:100px;padding-bottom:100px">
-			<h4 style="background-color:rgba(240, 240, 240, .6);height:100px;padding-top:33px;">
-			<strong>3 : 予約完了</strong>
-			</h4>
-		</div>
-	</div>
-</div>
-<br>
-<div style="padding:30px 30px 10px 30px;">
-	<div class="card" style="padding:20px;">
-		<h4>ご予約の流れ</h4>
-		<hr>
-		<div class="row">
-			<div class="col-4">
-				<div class="card" style="padding:10px;margin:5px 10px;">
-					<h5 style="color:rgba(30, 30, 30, .3)">1 : 予約プラン確認</h5>
-				</div>
-			</div>
-			<div class="col-4">
-				<div class="card" style="padding:10px;margin:5px 10px;">
-					<h5 style="color:rgba(30, 30, 30, .3)">2 : ご予約内容の入力</h5>
-				</div>
-			</div>
-			<div class="col-4">
-				<div class="card" style="padding:10px;border-width:3px;border-color:#66CCFF;margin:5px 10px;">
-					<h5>3 : 予約完了</h5>
+	<div class="row" style="min-width::100%;margin:0 !important;display:block;">
+		<div class="d-none d-sm-block">
+			<div style="background-image:url('https://megufuji154.s3.us-east-2.amazonaws.com/photos/common/common3.jpg');background-repeat: no-repeat, repeat;background-size: cover;background-size:100% auto;min-height:250px;width:100%;">
+				<div style="padding:30px 30px 10px 30px;">
+					<div class="card" style="padding:20px;background-color:rgba(240, 240, 240, .45)">
+						<h4>〇 ご予約の流れ</h4>
+						<hr>
+						<div class="row">
+							<div class="col-4">
+								<div class="card" style="padding:10px;margin:5px 10px;">
+									<h5 style="margin-bottom:0px;color:rgba(30, 30, 30, .3)">1 : 予約プランの確認</h5>
+								</div>
+							</div>
+							<div class="col-4">
+								<div class="card" style="padding:10px;margin:5px 10px;">
+									<h5 style="margin-bottom:0px;color:rgba(30, 30, 30, .3)">2 : ご予約内容の入力</h5>
+								</div>
+							</div>
+							<div class="col-4">
+								<div class="card" style="padding:10px;border-width:3px;border-color:#66CCFF;margin:5px 10px;">
+									<h5 style="margin-bottom:0px;">3 : 予約完了</h5>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</div>
