--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -1,4 +1,4 @@
-<div style="">
+<div style="width:100%">
 	<div style="background-image:url('/assets/IMG_6009.JPG');background-size: cover;min-height:400px;opacity:.7;">
 		<h3 style="color:white;padding-left:20%;width:80%;padding-top:150px;">
 			ようこそ。Megu Fujiへ。
@@ -11,7 +11,7 @@
 <h1 class="">さあ！富士山の旅に出よう！</h1>
 <br>
 <div class="row">
-	<div class="col-4">
+	<div class="col-sm-4">
 		<p>
 		<br>
 		富士山・河口湖など観光地に近い立地。
@@ -25,7 +25,7 @@
 		<strong>観光にとどまらない旅先の思い出を提供します。</strong>
 		</p>
 	</div>
-	<div class="col-8">
+	<div class="col-sm-8">
 	<div class="checkin-form-section" style="background-color:#4682B4;color:white;padding:20px;border-radius:10px;">
 	<h1 class="text-center">宿泊予約</h1>
 	<hr>
@@ -54,11 +54,11 @@
 </div>
 <br>
 <div class="row">
-	<div class="col-4" style="border:2px solid black">
+	<div class="col-sm-4 col-6" style="border:2px solid black">
 		<div style="background-image: url('https://megufuji154.s3.us-east-2.amazonaws.com/photos/top/megufuji.jpg');height:400px;width:105%;background-repeat: no-repeat, repeat;background-size: cover;">
 		</div>
 	</div>
-	<div class="col-8" style="border:2px solid black;border-left:1px solid black">
+	<div class="col-sm-8 col-6" style="border:2px solid black;border-left:1px solid black">
 		<div style="margin-right:30%">
 		<h1 style="margin-top:20px;padding-left:10px;">最高の宿泊施設を<br>目指し</h1>
 		<hr>
@@ -87,7 +87,7 @@
 				</p>
 				<div class="row">
 					<% Tag.all.each do |tag| %>
-						<div class="col-3">
+						<div class="col-sm-3 col-6">
 							<a href="/plans?tags=<%= tag.id %>">
 								<div style="border:1px solid rgba(140, 140, 140, .6); border-left:3px solid #4169e1;padding:5px;margin-bottom:10px;background-color:white;">
 									<small><%= tag.name %></small>
@@ -100,7 +100,7 @@
 			</div>
 		</div>
 		<% @plans.each do |plan| %>
-			<div class="col-6" >
+			<div class="col-sm-6 col-12" >
 				<div class="card" style="padding:12px;margin-bottom:10px;">
 					<div style="width:100%;padding-left:0%;">
 						<a href="/plans/<%= plan.id %>">
@@ -135,6 +135,8 @@
 </div>
 <h1 class="text-center" style="margin:35px 0;">
 	最高の旅行の思い出を残しましょう。　<% if user_signed_in? %><a href="/articles/new" class="btn btn-sm btn-warning text-center" style="margin-bottom:10px;">オプション作成</a><% end %>
+	<br>
+	<a href="/articles?is_option=0" class="btn btn-sm btn-primary" style="">詳細を見る</a>
 </h1>
 <p class="text-center" style="width:35%;margin:0 32%;font-size:9px;word-wrap: break-word;">
 	testtesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttesttest
@@ -150,27 +152,31 @@
 	<div>
 		<div class="row" style="margin:0 7%">
 		<% @options.each do |option| %>
-			<div class="col-6" id="scroll-block-<%= option.id %>" <% if option.id%2 == 1 %>style="margin-top:45px;"<% end %>>
+			<div class="col-sm-6" id="scroll-block-<%= option.id %>" <% if option.id%2 == 1 %>style="margin-top:45px;"<% end %>>
 				<div style="padding:20px;margin-bottom:10px;">
-				<img src="<%= option.fixed_image_url %>" style="width:70%">
-				<h5 style="margin-top:20px;border-left:5px solid #4169e1;padding:5px;border-bottom:1px solid #4169e1;width:70%"><strong><%= option.title %></strong></h5>
-				<p style="width:70%;"><%= strip_tags(option.content)[0..30] %>...</p>
+				<img src="<%= option.fixed_image_url %>" style="width:70%;margin-left:15%;">
+				<h5 style="margin-top:20px;border-left:5px solid #4169e1;padding:5px;border-bottom:1px solid #4169e1;width:70%;margin-left:15%;"><strong><%= option.title %></strong></h5>
+				<p style="width:70%;margin-left:15%;"><%= strip_tags(option.content)[0..30] %>...</p>
+				<div style="margin-left:15%;">
 				<a href="/articles/<%= option.id %>" class="btn btn-sm btn-info">詳細見る</a>
+				</div>
 				</div>
 			</div>
 		<% end %>
-			<div class="col-6">
+			<div class="col-sm-6">
 				<div style="padding:20px;margin-bottom:10px;">
-				<img src="/assets/common/common2.jpg" style="width:70%">
-				<h5 style="margin-top:20px;border-left:5px solid #4169e1;padding:5px;border-bottom:1px solid #4169e1;width:70%">もっと見る</h5>
-				<p style="width:70%;">私たち、もっと多くの活動を提供しています。</p>
+				<img src="/assets/common/common2.jpg" style="width:70%;margin-left:15%;">
+				<h5 style="margin-top:20px;border-left:5px solid #4169e1;padding:5px;border-bottom:1px solid #4169e1;width:70%;margin-left:15%;">もっと見る</h5>
+				<p style="width:70%;margin-left:15%;">私たち、もっと多くの活動を提供しています。
+				<div style="margin-left:15%;">
 				<a href="/articles/" class="btn btn-sm btn-info">もっと見る</a>
+				</div>
+				</p>
 				</div>
 			</div>
 		</div>
 	</div>
 </div>
-<a href="/articles?is_option=0" class="btn btn-sm btn-primary" style="margin-left:15px;margin-bottom:15px">詳細を見る</a>
 <div class="article-section" style="background-color:black;color:white;-webkit-transform: rotate(-5deg);-ms-transform: rotate(5deg);padding:0 100px;width:120%;margin-left:-10%">
 	<div style="-webkit-transform: rotate(5deg);-ms-transform: rotate(5deg);width:83%;margin-left:8%;">
 	<br>
@@ -193,15 +199,16 @@
 	<div class="table table-responsive">
 		<table class="table table-bordered table-striped">
 		<% @articles.each do |article| %>
-			<td style="background-color:rgba(0, 0, 0);">
-				<div class="" style="padding:20px;margin-bottom:10px;">
-					<img src="<%= article.fixed_image_url %>" style="width:120px;height:70px;margin-left:5px;">
-					<div style="height:120px">
-						<h5 style="margin-top:7px;"><%= article.title %></h5>
-						<p><%= strip_tags(article.content)[0..15] %>...</p>
+			<td style="background-image:url('<%= article.fixed_image_url %>');background-size: cover;">
+				<a href="/articles/<%= article.id %>" style="color:#EEE;">
+					<div class="" style="margin-bottom:10px;">
+						<div style="background-color: rgba(70, 70, 70, .7);width:150px;height:77px;padding:5px">
+							<h5 style="margin-top:7px;"><%= article.title %></h5>
+						</div>
+						<br>
+						<a href="/articles/<%= article.id %>" class="btn btn-sm btn-secondary">詳細見る</a>
 					</div>
-					<a href="/articles/<%= article.id %>" class="btn btn-sm btn-secondary">詳細見る</a>
-				</div>
+				</a>
 			</td>
 		<% end %>
 		</table>
@@ -214,14 +221,15 @@
 	<hr style="border-color:red;width:100px;">
 	<br>
 	<div class="row">
-		<div class="col-1"></div>
-		<div class="col-5">
+		<div class="col-sm-1"></div>
+		<div class="col-sm-5 col-12">
 			<div class="fb-page" data-href="https://www.facebook.com/megufuji2021" data-tabs="timeline" data-width="" data-height="" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/megufuji2021" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/megufuji2021">Megu Fuji 2021</a></blockquote></div>
+			<br><br>
 		</div>
-		<div class="col-5">
+		<div class="col-sm-5 col-12">
 			<blockquote class="instagram-media" data-instgrm-captioned data-instgrm-permalink="https://www.instagram.com/p/B-gcBN_FKou/?utm_source=ig_embed&amp;utm_campaign=loading" data-instgrm-version="13" style=" background:#FFF; border:0; border-radius:3px; box-shadow:0 0 1px 0 rgba(0,0,0,0.5),0 1px 10px 0 rgba(0,0,0,0.15); margin: 1px; max-width:540px; min-width:326px; padding:0; width:99.375%; width:-webkit-calc(100% - 2px); width:calc(100% - 2px);"><div style="padding:16px;"> <a href="https://www.instagram.com/p/B-gcBN_FKou/?utm_source=ig_embed&amp;utm_campaign=loading" style=" background:#FFFFFF; line-height:0; padding:0 0; text-align:center; text-decoration:none; width:100%;" target="_blank"> <div style=" display: flex; flex-direction: row; align-items: center;"> <div style="background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 40px; margin-right: 14px; width: 40px;"></div> <div style="display: flex; flex-direction: column; flex-grow: 1; justify-content: center;"> <div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; margin-bottom: 6px; width: 100px;"></div> <div style=" background-color: #F4F4F4; border-radius: 4px; flex-grow: 0; height: 14px; width: 60px;"></div></div></div><div style="padding: 19% 0;"></div> <div style="display:block; height:50px; margin:0 auto 12px; width:50px;"><svg width="50px" height="50px" viewBox="0 0 60 60" version="1.1" xmlns="https://www.w3.org/2000/svg" xmlns:xlink="https://www.w3.org/1999/xlink"><g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd"><g transform="translate(-511.000000, -20.000000)" fill="#000000"><g><path d="M556.869,30.41 C554.814,30.41 553.148,32.076 553.148,34.131 C553.148,36.186 554.814,37.852 556.869,37.852 C558.924,37.852 560.59,36.186 560.59,34.131 C560.59,32.076 558.924,30.41 556.869,30.41 M541,60.657 C535.114,60.657 530.342,55.887 530.342,50 C530.342,44.114 535.114,39.342 541,39.342 C546.887,39.342 551.658,44.114 551.658,50 C551.658,55.887 546.887,60.657 541,60.657 M541,33.886 C532.1,33.886 524.886,41.1 524.886,50 C524.886,58.899 532.1,66.113 541,66.113 C549.9,66.113 557.115,58.899 557.115,50 C557.115,41.1 549.9,33.886 541,33.886 M565.378,62.101 C565.244,65.022 564.756,66.606 564.346,67.663 C563.803,69.06 563.154,70.057 562.106,71.106 C561.058,72.155 560.06,72.803 558.662,73.347 C557.607,73.757 556.021,74.244 553.102,74.378 C549.944,74.521 548.997,74.552 541,74.552 C533.003,74.552 532.056,74.521 528.898,74.378 C525.979,74.244 524.393,73.757 523.338,73.347 C521.94,72.803 520.942,72.155 519.894,71.106 C518.846,70.057 518.197,69.06 517.654,67.663 C517.244,66.606 516.755,65.022 516.623,62.101 C516.479,58.943 516.448,57.996 516.448,50 C516.448,42.003 516.479,41.056 516.623,37.899 C516.755,34.978 517.244,33.391 517.654,32.338 C518.197,30.938 518.846,29.942 519.894,28.894 C520.942,27.846 521.94,27.196 523.338,26.654 C524.393,26.244 525.979,25.756 528.898,25.623 C532.057,25.479 533.004,25.448 541,25.448 C548.997,25.448 549.943,25.479 553.102,25.623 C556.021,25.756 557.607,26.244 558.662,26.654 C560.06,27.196 561.058,27.846 562.106,28.894 C563.154,29.942 563.803,30.938 564.346,32.338 C564.756,33.391 565.244,34.978 565.378,37.899 C565.522,41.056 565.552,42.003 565.552,50 C565.552,57.996 565.522,58.943 565.378,62.101 M570.82,37.631 C570.674,34.438 570.167,32.258 569.425,30.349 C568.659,28.377 567.633,26.702 565.965,25.035 C564.297,23.368 562.623,22.342 560.652,21.575 C558.743,20.834 556.562,20.326 553.369,20.18 C550.169,20.033 549.148,20 541,20 C532.853,20 531.831,20.033 528.631,20.18 C525.438,20.326 523.257,20.834 521.349,21.575 C519.376,22.342 517.703,23.368 516.035,25.035 C514.368,26.702 513.342,28.377 512.574,30.349 C511.834,32.258 511.326,34.438 511.181,37.631 C511.035,40.831 511,41.851 511,50 C511,58.147 511.035,59.17 511.181,62.369 C511.326,65.562 511.834,67.743 512.574,69.651 C513.342,71.625 514.368,73.296 516.035,74.965 C517.703,76.634 519.376,77.658 521.349,78.425 C523.257,79.167 525.438,79.673 528.631,79.82 C531.831,79.965 532.853,80.001 541,80.001 C549.148,80.001 550.169,79.965 553.369,79.82 C556.562,79.673 558.743,79.167 560.652,78.425 C562.623,77.658 564.297,76.634 565.965,74.965 C567.633,73.296 568.659,71.625 569.425,69.651 C570.167,67.743 570.674,65.562 570.82,62.369 C570.966,59.17 571,58.147 571,50 C571,41.851 570.966,40.831 570.82,37.631"></path></g></g></g></svg></div><div style="padding-top: 8px;"> <div style=" color:#3897f0; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:550; line-height:18px;"> この投稿をInstagramで見る</div></div><div style="padding: 12.5% 0;"></div> <div style="display: flex; flex-direction: row; margin-bottom: 14px; align-items: center;"><div> <div style="background-color: #F4F4F4; border-radius: 50%; height: 12.5px; width: 12.5px; transform: translateX(0px) translateY(7px);"></div> <div style="background-color: #F4F4F4; height: 12.5px; transform: rotate(-45deg) translateX(3px) translateY(1px); width: 12.5px; flex-grow: 0; margin-right: 14px; margin-left: 2px;"></div> <div style="background-color: #F4F4F4; border-radius: 50%; height: 12.5px; width: 12.5px; transform: translateX(9px) translateY(-18px);"></div></div><div style="margin-left: 8px;"> <div style=" background-color: #F4F4F4; border-radius: 50%; flex-grow: 0; height: 20px; width: 20px;"></div> <div style=" width: 0; height: 0; border-top: 2px solid transparent; border-left: 6px solid #f4f4f4; border-bottom: 2px solid transparent; transform: translateX(16px) translateY(-4px) rotate(30deg)"></div></div><div style="margin-left: auto;"> <div style=" width: 0px; border-top: 8px solid #F4F4F4; border-right: 8px solid transparent; transform: translateY(16px);"></div> <div style=" background-color: #F4F4F4; flex-grow: 0; height: 12px; width: 16px; transform: translateY(-4px);"></div> <div style=" width: 0; height: 0; border-top: 8px solid #F4F4F4; border-left: 8px solid transparent; transform: translateY(-4px) translateX(8px);"></div></div></div></a> <p style=" margin:8px 0 0 0; padding:0 4px;"> <a href="https://www.instagram.com/p/B-gcBN_FKou/?utm_source=ig_embed&amp;utm_campaign=loading" style=" color:#000; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px; text-decoration:none; word-wrap:break-word;" target="_blank">這裡你來過嗎？ 🈁🈁 五重塔，富士山，神社⛩️，櫻花🌸 小火車，可愛的馬弟弟🈁 ❤️❤️ 我們2020年12月底 ㊗️全新開幕 MeguFuji旅宿 附近秘境介紹系列 💯💯 歡迎關注 ✅✅ #MeguFuji旅宿 #全新概念旅宿 #富士山 #富士山五重塔 #櫻花</a></p> <p style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; line-height:17px; margin-bottom:0; margin-top:8px; overflow:hidden; padding:8px 0 7px; text-align:center; text-overflow:ellipsis; white-space:nowrap;"><a href="https://www.instagram.com/megufuji123/?utm_source=ig_embed&amp;utm_campaign=loading" style=" color:#c9c8cd; font-family:Arial,sans-serif; font-size:14px; font-style:normal; font-weight:normal; line-height:17px;" target="_blank"> Megufuji</a>(@megufuji123)がシェアした投稿 - <time style=" font-family:Arial,sans-serif; font-size:14px; line-height:17px;" datetime="2020-04-03T05:23:13+00:00">2020年 4月月2日午後10時23分PDT</time></p></div></blockquote> <script async src="//www.instagram.com/embed.js"></script>
 		</div>
-		<div class="col-1"></div>
+		<div class="col-sm-1"></div>
 	</div>
 </div>
 <div>
