--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -5,6 +5,9 @@
 			<br>
 			富士山の魅力を満喫できる宿へ。
 		</h3>
+		<div style="padding-left:20%;">
+			<a href="/plans" class="btn btn-dark">部屋を見る</a>
+		</div>
 	</div>
 </div>
 <br>
